[package]
name = "caesar"
version = "0.1.0"
edition = "2021"
authors = ["Kurgon"]
description = "Julius Caesar's favourite build tool. Not meant to be used in production"
readme = "README.md"
repository = "https://github.com/Kurgon/caesar"
license = "GPL-2.0"
keywords = ["caesar", "cli", "build", "project", "code"]
categories = ["command-line-utilities", "development", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
